--- a/av1an-core/Cargo.toml
+++ b/av1an-core/Cargo.toml
@@ -9,11 +9,16 @@ edition = "2018"
 log = "0.4.14"
 av-format = "0.3.1"
 av-ivf = { git = "https://github.com/rust-av/ivf-rs", rev = "031aab76d1fc70a4b8518dc2ef5c3f4f1d839721" }
+av-scenechange = "0.5.0"
 anyhow = "1.0.40"
 num_cpus = "1.13.0"
 sysinfo = "0.17.4"
 vapoursynth = { version = "0.3.0", features = ["vsscript-functions", "vapoursynth-functions"] }
-clap = "2.33.3"
 num-rational = "0.4.0"
 failure = "0.1.8"
 regex = "1.5.4"
+thiserror = "1.0.24"
+clap = "3.0.0-beta.2"
+y4m = "0.7.0"
+v_frame = "0.2.1"
+rav1e = { version = "0.4.1", features = ["asm", "scenechange"] }
