--- a/av1an-pyo3/Cargo.toml
+++ b/av1an-pyo3/Cargo.toml
@@ -31,5 +31,8 @@ crate-type = ["cdylib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pyo3 = { version = "0.13.2" }
 av1an-core = { path = "../av1an-core" }
+
+[dependencies.pyo3]
+version = "0.13.2"
+features = ["auto-initialize"]
