--- a/av1an-cli/Cargo.toml
+++ b/av1an-cli/Cargo.toml
@@ -11,9 +11,8 @@ av1an-core = { path = "../av1an-core" }
 anyhow = "1.0.40"
 thiserror = "1.0.24"
 dialoguer = "0.8.0"
-indicatif = { git = "https://github.com/mitsuhiko/indicatif" }
-static_init = "1.0.1"
+indicatif = { git = "https://github.com/mitsuhiko/indicatif", branch = "main" }
 log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rayon = "1.5.1"
-fnv = "1.0.7"
+circular-queue = "0.2.6"
