--- a/av1an-cli/Cargo.toml
+++ b/av1an-cli/Cargo.toml
@@ -16,3 +16,5 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 rayon = "1.5.1"
 circular-queue = "0.2.6"
+serde_json = "1.0.64"
+serde = { version = "1.0.126", features = ["serde_derive"] }
