--- a/av1an-cli/Cargo.toml
+++ b/av1an-cli/Cargo.toml
@@ -6,15 +6,22 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.2"
 av1an-core = { path = "../av1an-core" }
 anyhow = "1.0.40"
 thiserror = "1.0.24"
 dialoguer = "0.8.0"
 indicatif = { git = "https://github.com/mitsuhiko/indicatif", branch = "main" }
-log = "0.4.14"
-pretty_env_logger = "0.4.0"
 rayon = "1.5.1"
 circular-queue = "0.2.6"
-serde_json = "1.0.64"
-serde = { version = "1.0.126", features = ["serde_derive"] }
+log = "0.4.14"
+slog = "2.7.0"
+slog-term = "2.8.0"
+crossbeam = "0.8.1"
+
+[dependencies.clap]
+version = "2.33.3"
+default-features = false
+features = ["suggestions"]
+
+[build-dependencies]
+vergen = "5.1.8"
