--- a/av1an-cli/Cargo.toml
+++ b/av1an-cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-av1an-core = { path = "../av1an-core" }
+av1an = { package = "av1an-core", path = "../av1an-core" }
 anyhow = "1.0.40"
 thiserror = "1.0.24"
 dialoguer = "0.8.0"
