--- a/av1an-cli/Cargo.toml
+++ b/av1an-cli/Cargo.toml
@@ -15,7 +15,7 @@ rayon = "1.5.1"
 log = "0.4.14"
 slog = "2.7.0"
 slog-term = "2.8.0"
-crossbeam = "0.8.1"
+crossbeam-utils = "0.8.5"
 
 [dependencies.clap]
 version = "2.33.3"
