--- a/av1an-core/Cargo.toml
+++ b/av1an-core/Cargo.toml
@@ -17,13 +17,12 @@ failure = "0.1.8"
 regex = "1.5.4"
 thiserror = "1.0.24"
 y4m = "0.7.0"
-rav1e = { version = "0.4.1", features = ["asm", "scenechange"] }
 psutil = "3.2.1"
 strum = "0.21.0"
 strum_macros = "0.21.1"
-rayon = "1.5.1"
 slog = "2.7.0"
-crossbeam = "0.8.1"
+crossbeam-channel = "0.5.1"
+crossbeam-utils = "0.8.5"
 
 [dependencies.av-scenechange]
 version = "0.5.0"
